syntax = "proto3";

package io.github.vinicreis.dht.core.model.response;

import "io/github/vinicreis/dht/core/model/result.proto";
import "io/github/vinicreis/dht/core/model/data.proto";

message FoundResponse {
  Result result = 1;
  optional bytes key = 2;
  optional Data data = 3;
}
